k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lovetest-core
  labels:
    name: lovetest-core
    managed-by: argocd
