k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lovetest-api
  namespace: lovetest-core
  labels:
    app: lovetest-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: lovetest-api
